Use web components in extension.

--- a/extensions/wallet/styles/connect.css
+++ b/extensions/wallet/styles/connect.css
@@ -1,8 +1,8 @@
-.form-input-container {
+.connect-input-container {
   margin-bottom: 12px;
 }
 
-.form-input {
+.connect-input {
   width: 100%;
   box-sizing: border-box;
 }
