--- a/site/templates/index.html
+++ b/site/templates/index.html
@@ -2,15 +2,9 @@
 
 <html lang="en">
   <head>
-    <title>
-      Home
-    </title>
+    <title>Ticket Commander</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
-  <body>
-    <div>
-      Home Page
-    </div>
-  </body>
+  <body id="body"></body>
 </html>
