--- a/site/templates/index.html
+++ b/site/templates/index.html
@@ -5,6 +5,9 @@
     <title>Ticket Commander</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script type="text/javascript" src="static/js/lib/ethers.js" defer></script>
+    <script type="text/javascript" src="static/js/component/ticket.js" defer></script>
+    <script type="text/javascript" src="static/js/index.js" defer></script>
   </head>
   <body id="body"></body>
 </html>
