--- a/site/templates/index.html
+++ b/site/templates/index.html
@@ -6,6 +6,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script type="text/javascript" src="static/js/lib/ethers.js" defer></script>
+    <script type="text/javascript" src="static/js/lib/chain.js" defer></script>
+    <script type="text/javascript" src="static/js/component/account.js" defer></script>
     <script type="text/javascript" src="static/js/component/ticket.js" defer></script>
     <script type="text/javascript" src="static/js/index.js" defer></script>
   </head>
