Full buy and sell flow.

--- a/app/components/App.css
+++ b/app/components/App.css
@@ -64,3 +64,10 @@ button {
   padding: 12px 16px;
   border-radius: 8px;
 }
+
+.button-disabled {
+  background-color: gray;
+  color: white;
+  padding: 12px 16px;
+  border-radius: 8px;
+}
