--- a/app/components/App.css
+++ b/app/components/App.css
@@ -70,4 +70,19 @@ button {
   color: white;
   padding: 12px 16px;
   border-radius: 8px;
+  cursor: default;
+}
+
+.empty-state-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid black;
+  border-radius: 8px;
+}
+
+.empty-state-text {
+  font-weight: bold;
+  text-align: center;
+  padding: 20px 30px;
 }
