--- a/extensions/wallet/popup/css/add_account.css
+++ b/extensions/wallet/popup/css/add_account.css
@@ -1,9 +1,17 @@
+.add-account-label {
+  display: inline-block;
+  font-size: 12px;
+  font-weight: bold;
+  margin-bottom: 2px;
+}
+
 .add-account-input-container {
   margin-bottom: 12px;
 }
 
 .add-account-input {
   width: 100%;
+  padding: 6px;
   box-sizing: border-box;
 }
 
